--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ a:hover {
   transition: transform 0.3s ease;
   aspect-ratio: 1 / 1;
   object-fit: cover;
-  object-position: center;
+  object-position: top;
 }
 
 .headshot-container img:hover {
