--- a/style.css
+++ b/style.css
@@ -276,4 +276,5 @@ footer a:hover {
 /* Performance Optimization */
 #experience {
   content-visibility: auto;
+  contain-intrinsic-size: 1px 1000px;
 }
