--- a/style.css
+++ b/style.css
@@ -195,9 +195,9 @@ a:hover {
 
 /* Timeline/Experience */
 .timeline-list {
-  list-style: none !important;
-  padding: 0 !important;
-  margin: 0 !important;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 .timeline-item {
