--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ a:hover {
   color: var(--color-primary);
 }
 
+:focus-visible {
+  outline: 2px solid var(--color-primary);
+  outline-offset: 2px;
+}
+
 /* Glassmorphism Classes */
 
 .glass-nav {
@@ -138,6 +143,10 @@ a:hover {
 
 .headshot-container img:hover {
   transform: scale(1.02);
+}
+
+.logo-img {
+  object-fit: contain;
 }
 
 /* Cards */
@@ -228,7 +237,7 @@ a:hover {
 .timeline-item::before {
   content: "";
   position: absolute;
-  left: -6px;
+  left: -4px;
   top: 0;
   width: 10px;
   height: 10px;
